--- a/admin/src/Assets/Styles/_variables.scss
+++ b/admin/src/Assets/Styles/_variables.scss
@@ -11,6 +11,14 @@ $sidebarmain:#E3FEF7;
 $darkGrey: #828282;
 $lightGrey: #d6d6d6;
 
+//other test color
+$darkGreen: #5c8d89;
+$green: #74b49b;
+$lightGreen: #a7d7c5;
+$veryLightGreen: #f4f9f4;
+$darkGrey: #828282;
+$white: #ffffff;
+$lightGrey: #f2f2f2;
 //les fonts family
 $font-family:"Andada Pro", serif;
 $lightFont:600;
