--- a/admin/src/Assets/Styles/main.scss
+++ b/admin/src/Assets/Styles/main.scss
@@ -1,134 +1,226 @@
-@import "./_variables";
+// @import "./_variables";
 
-body{
-    overflow: hidden;
-    height: 100vh;
-    width: 100vw;
-    font-family: $font-family;
-    background-color: $green-light;
-    text-transform: capitalize;
-}
+// body{
+//     overflow: hidden;
+//     height: 100vh;
+//     width: 100vw;
+//     font-family: $font-family;
+//     background-color: $green-light;
+//     text-transform: capitalize;
+// }
 
-h1 {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+// h1 {
+//     width: 100vw;
+//     height: 100vh;
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+// }
 
-.sidebar{
-    background-color: $sidebarmain;
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 2rem 3rem;
-    width: 15rem;
-    height: 100vh;
-        .logoContainer{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            h2.title{
-                font-size: 31.42px;
-                color: $sidebarsecond;
-                padding: 0 0 0 1rem;
-            }
-        }
-        .burgerContainer{
-            content: "";
-            background-color: $sidebarsecond;
-            position: absolute;
-            right: (-35px/2);
-            top: calc(9rem / 1.15);
-            width: 35px;
-            height: 35px;
-            border-radius: 2rem;
-            z-index: 1;
-            .burgerTrigger {
-                content: "";
-                width: 35px;
-                height: 35px;
-                background-color: red;
-                cursor: pointer;
-                z-index: 6;
-                opacity: 0;
-                position: relative;
-            }
-            .burgerMenu {
-                content: "";
-                // background-color: $sidebarmain;
-                position: relative;
-                z-index: 1;
-                width: 20px;
-                height: 3px;
-                border-radius: 2rem;
-                bottom: calc(35px / 2);
-                left: 0.45rem;
-                transition: 0.5s all;
-            }
-            .burgerMenu::after {
-                content: "";
-                background-color: #fff;
-                position: absolute;
-                width: 20px;
-                height: 3px;
-                border-radius: 2rem;
-                top: 0.4rem;
-                transform: translateY(-0.4rem) rotate(45deg);
-                transition: 0.5s all;
-            }
-            .burgerMenu::before {
-                content: "";
-                background-color: #fff;
-                position: absolute;
-                width: 20px;
-                height: 3px;
-                border-radius: 2rem;
-                top: -0.4rem;
-                transform: translateY(0.4rem) rotate(-45deg);
-                transition: 0.5s all;
-            }
-        }
-        .burgerContainer::after {
-            content: "";
-            position: absolute;
-            right: 35px;
-            top: (35px / 2);
-            z-index: 0;
-            width: calc(6rem + 15rem);
-            background-color: $lightGrey;
-            height: 2px;
-            transition: 0.5s all;
-        }
-        .profilContainer{
-            display: flex;
-            align-items: center;
-            justify-content: flex-start;
-            padding: 3rem 0 0 0;
-            img{
-                width: auto;
-                height: 3.5rem;
-            }
+// .sidebar{
+//     background-color: $sidebarmain;
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     padding: 2rem 3rem;
+//     width: 15rem;
+//     height: 100vh;
+//         .logoContainer{
+//             display: flex;
+//             justify-content: center;
+//             align-items: center;
+//             h2.title{
+//                 font-size: 31.42px;
+//                 color: $sidebarsecond;
+//                 padding: 0 0 0 1rem;
+//             }
+//         }
+//         .burgerContainer{
+//             content: "";
+//             background-color: $sidebarsecond;
+//             position: absolute;
+//             right: (-35px/2);
+//             top: calc(9rem / 1.15);
+//             width: 35px;
+//             height: 35px;
+//             border-radius: 2rem;
+//             z-index: 1;
+//             .burgerTrigger {
+//                 content: "";
+//                 width: 35px;
+//                 height: 35px;
+//                 background-color: red;
+//                 cursor: pointer;
+//                 z-index: 6;
+//                 opacity: 0;
+//                 position: relative;
+//             }
+//             .burgerMenu {
+//                 content: "";
+//                 // background-color: $sidebarmain;
+//                 position: relative;
+//                 z-index: 1;
+//                 width: 20px;
+//                 height: 3px;
+//                 border-radius: 2rem;
+//                 bottom: calc(35px / 2);
+//                 left: 0.45rem;
+//                 transition: 0.5s all;
+//             }
+//             .burgerMenu::after {
+//                 content: "";
+//                 background-color: #fff;
+//                 position: absolute;
+//                 width: 20px;
+//                 height: 3px;
+//                 border-radius: 2rem;
+//                 top: 0.4rem;
+//                 transform: translateY(-0.4rem) rotate(45deg);
+//                 transition: 0.5s all;
+//             }
+//             .burgerMenu::before {
+//                 content: "";
+//                 background-color: #fff;
+//                 position: absolute;
+//                 width: 20px;
+//                 height: 3px;
+//                 border-radius: 2rem;
+//                 top: -0.4rem;
+//                 transform: translateY(0.4rem) rotate(-45deg);
+//                 transition: 0.5s all;
+//             }
+//         }
+//         .burgerContainer::after {
+//             content: "";
+//             position: absolute;
+//             right: 35px;
+//             top: (35px / 2);
+//             z-index: 0;
+//             width: calc(6rem + 15rem);
+//             background-color: $lightGrey;
+//             height: 2px;
+//             transition: 0.5s all;
+//         }
+//         .profilContainer{
+//             display: flex;
+//             align-items: center;
+//             justify-content: flex-start;
+//             padding: 3rem 0 0 0;
+//             img{
+//                 width: auto;
+//                 height: 3.5rem;
+//             }
             
-            .profilContents{
-                padding: 0 0 0 1rem;
-                p.name{
-                    padding: 0;
-                    margin: 0;
-                    font-size: 16.7px;
-                    color: $darkGrey;
-                    text-transform: capitalize;
-                    font-weight:$heavyFont ;
-                }
-                p{
-                    padding: 0;
-                    margin: 0;
-                    font-size: 11.9px;
-                    color:$darkGrey;
-                    text-transform: lowercase;
-                }
-            }
-        }
-        
-}
+//             .profilContents{
+//                 padding: 0 0 0 1rem;
+//                 p.name{
+//                     padding: 0;
+//                     margin: 0;
+//                     font-size: 16.7px;
+//                     color: $darkGrey;
+//                     text-transform: capitalize;
+//                     font-weight:$heavyFont ;
+//                 }
+//                 p{
+//                     padding: 0;
+//                     margin: 0;
+//                     font-size: 11.9px;
+//                     color:$darkGrey;
+//                     text-transform: lowercase;
+//                 }
+//             }
+//         }
+//         .contentsContainer {
+//             margin: 2rem 0 0 0;
+    
+//             ul {
+//                 display: flex;
+//                 align-items: flex-start;
+//                 justify-content: space-between;
+//                 flex-direction: column;
+//                 list-style: none;
+//                 padding: 0;
+//                 margin: 0;
+    
+//                 li {
+//                     display: flex;
+//                     align-items: center;
+//                     justify-content: flex-start;
+//                     flex-direction: row;
+//                     margin: 0.55rem 0;
+//                     padding: 0.55rem 0;
+//                     width: 100%;
+//                     border-radius: 1rem;
+//                     cursor: pointer;
+    
+//                     .icon {
+//                         padding: 0 1rem 0 0.5rem;
+//                         color: $sidebarsecond;
+//                     }
+    
+//                     a {
+//                         text-decoration: none;
+//                         color: $darkGrey;
+//                         font-size: 20px;
+//                         display: flex;
+//                         align-items: center;
+//                         justify-content: space-between;
+//                         margin: 0 0 0 0.5rem;
+//                     }
+//                 }
+    
+//                 li.active {
+//                     background-color: $veryLightGreen;
+    
+//                     a {
+//                         color: $green;
+//                     }
+//                 }
+    
+//                 li:hover {
+//                     background-color: $green-dark;
+//                     transition: 0.25s;
+//                 }
+//             }
+//         }
+// }
+// .sidebar.active {
+//     width: 3rem;
+//     transition: 0.5s all;
+
+//     .logoContainer.active {
+//         h2.title {
+//             opacity: 0;
+//         }
+//     }
+
+//     .burgerContainer.active {
+//         transition: 0.5s all;
+//         .burgerMenu {
+//             background-color: #fff;
+//             transition: 0.5s all;
+//         }
+
+//         .burgerMenu::before {
+//             transform: translateY(0rem) rotate(0deg);
+//             transition: 0.5s all;
+//         }
+
+//         .burgerMenu::after {
+//             transform: translateY(0rem) rotate(0deg);
+//             transition: 0.5s all;
+//         }
+//     }
+
+//     .profileContainer {
+//         .profileContents {
+//             opacity: 0;
+//         }
+//     }
+
+//     .contentsContainer {
+//         a {
+//             opacity: 0;
+//         }
+//     }
+// }
