70% of landing page done

--- a/client/src/Assets/Styles/home.css
+++ b/client/src/Assets/Styles/home.css
@@ -89,7 +89,8 @@ body{
     top: 85%;
     left: 7%;
     background-color: #fff;
-    width: 85%;
+    width: 90%;
+    height: 70px;
   }
   .form-container .form-item{
     display: flex;
@@ -98,8 +99,39 @@ body{
   .form-item label{
     font-family: "DM Sans", sans-serif;
     margin-left: 1px;
+    font-weight: bold;
   }
-
+  .button-from button{
+    background-color: #00a9e6;
+    border: none;
+    border-radius: 12px;
+    cursor: pointer;
+    font-family: "Poppins",sans-serif;
+    height: 45px;
+    width: 200px;
+  }
+  .form-item.date{
+    position: relative;
+  }
+  .dateIcon{
+    position: absolute; /* Position absolue */
+    right:-10px; /* Positionnement à droite de l'input */
+    top: 60%; /* Alignement vertical au milieu */
+    transform: translateY(-5%); /* Décalage de moitié de la hauteur de l'icône vers le haut */
+    color: #00a9e6;
+}
+  .form-item input[type="date"]::-webkit-calendar-picker-indicator {
+    display: none; /* Masquer l'icône par défaut */
+  }
+  .form-item input{
+    font-family: "Dm sans";
+    background-color: #DEE5E5;
+    border: none;
+    height: 25px;
+    width: 100%;
+    border-radius: 7px;
+    padding: 0 10px 0 10px;
+  }
 /* ? Choose us css */
 .chooseUS{
     display: flex;
@@ -111,22 +143,37 @@ body{
 .ChooseUs-img {
     width: 30%;
     height: 240px;
-    border-radius: 12px;
+    /* border-radius: 12px; */
+    position: relative;
+    display: inline-block;
 }
 .ChooseUs-img img{
     width: 100%;
-    height: auto;
+    height: 300px;
     border-radius: 12px;
+    display: block;
 
 }
+.chooseUS-img .bottom-left-text{
+    position: absolute; /* Position absolue */
+  bottom: 0; /* Alignement en bas */
+  left: 0; /* Alignement à gauche */
+  margin: 10px; /* Marge autour du texte */
+  color: white; /* Couleur du texte */
+  background-color: rgba(0, 0, 0, 0.5); /* Arrière-plan semi-transparent */
+  padding: 5px; /* Rembourrage autour du texte */
+    font-family: "Dm sabs",sans-serif;
+}
+p .star{color: yellow;}
 .ChooseUs-content{
     width: 50%;
 }
 .ChooseUs-content .title{
     display: flex;
-    justify-content:start;
-    align-items: center;
+    align-items: baseline;
+    /* justify-content:start; */
     font-family: "Dm sans";
+    margin-left: 0;
 }
 .title .color{
     color:#00a9e6;
