--- a/client/src/Assets/Styles/home.css
+++ b/client/src/Assets/Styles/home.css
@@ -2,6 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+:root{
+  --main-color: #00a9e6;
+}
 *{
     /* padding: 0; */
     margin: auto;
@@ -77,11 +80,11 @@ body{
     font-weight: bold;
   }
   
-  .banner-text button , button a {
-    font-size: 1.5rem;
+  .banner-text button , .banner-text button a {
+    font-size: 17px;
     margin-bottom: 30px;
     color: #EAF0F0;
-    background-color: #00a9e6;
+    background-color: var(--main-color);
     border: none;
     border-radius: 7px;
     transition: 0.7s ease-in-out;
@@ -90,7 +93,7 @@ body{
   .banner-text button:hover , button a:hover{
     transform: scale(1.1);
     background-color: rgba(0, 0, 0, 0.2);
-    color: #00a9e6;
+    color: var(--main-color);
   }
   .form-container {
     position: absolute;
@@ -114,13 +117,20 @@ body{
     font-weight: bold;
   }
   .button-from button{
-    background-color: #00a9e6;
+    background-color: var(--main-color);;
     border: none;
     border-radius: 12px;
     cursor: pointer;
     font-family: "Poppins",sans-serif;
     height: 45px;
     width: 200px;
+    transition: 0.7s ease-in-out;
+  }
+  .button-from button:hover{
+    transform: scale(0.8);
+    color: #fff;
+    background-color: #004b66;
+
   }
   .form-item.date{
     position: relative;
@@ -130,10 +140,10 @@ body{
     right:-10px; /* Positionnement à droite de l'input */
     top: 60%; /* Alignement vertical au milieu */
     transform: translateY(-5%); /* Décalage de moitié de la hauteur de l'icône vers le haut */
-    color: #00a9e6;
+    color: var(--main-color);
 }
   .form-item input[type="date"]::-webkit-calendar-picker-indicator {
-    display: none; /* Masquer l'icône par défaut */
+    opacity: 0; /* Masquer l'icône par défaut */
   }
   .form-item input,.form-item select{
     font-family: "Dm sans";
@@ -160,23 +170,26 @@ body{
     display: inline-block;
 }
 .ChooseUs-img img{
-    width: 100%;
-    height: 300px;
+    width: 110%;
+    height: 350px;
     border-radius: 12px;
     display: block;
-
+    margin-top: -70px;
 }
-.chooseUS-img .bottom-left-text{
+.bottom-left-text{
     position: absolute; /* Position absolue */
-  bottom: 0; /* Alignement en bas */
+  bottom: -20%; /* Alignement en bas */
   left: 0; /* Alignement à gauche */
   margin: 10px; /* Marge autour du texte */
-  color: white; /* Couleur du texte */
-  background-color: rgba(0, 0, 0, 0.5); /* Arrière-plan semi-transparent */
+  color: black; /* Couleur du texte */
+  background-color: rgba(255, 255, 255); /* Arrière-plan semi-transparent */
   padding: 5px; /* Rembourrage autour du texte */
     font-family: "Dm sabs",sans-serif;
+  border-radius: 12px;
+  height: 30px;
+
 }
-p .star{color: #DABE29;}
+p .star{color: #DABE29;margin-right: 10px;margin-top: 10%;}
 .ChooseUs-content{
     width: 50%;
 }
@@ -189,13 +202,16 @@ p .star{color: #DABE29;}
 }
 .title .color{
     color:#00a9e6;
+    margin-left: 0;
 }
-
+.ChooseUs-content .title h2:nth-child(2){
+  margin-left: -70%;
+}
 
 .ChooseUs-content ul {
     list-style: none; /* Supprime les puces par défaut */
     padding-left: 20px; /* Ajoute un espacement à gauche pour la liste */
-    line-height: 3;
+    line-height: 5;
     font-family: "Dm sans",sans-serif;
     font-weight: bold;
   }
