--- a/client/src/Assets/Styles/style.css
+++ b/client/src/Assets/Styles/style.css
@@ -1,7 +1,3 @@
-
-a {
-    color: #00B7FF;
-  }
   /* ! FOr the nav bar */
   .btn {
     padding: .45rem 1.5rem .35rem;
@@ -237,13 +233,18 @@ a {
   .app-form-button {
     background: none;
     border: none;
-    color: #00a9e6;
-    font-size: 14px;
     cursor: pointer;
     outline: none;
   }
   .customLinkb{
     text-decoration: none;
+    color: #00a9e6;
+    transition: 0.7s  ease-in-out;
+  }
+  .customLinkb:hover{
+    color: white;
+    border-radius: 12px;
+    transform: scale(1.2);
   }
   
   .app-form-button:hover {
