--- a/client/src/Assets/Styles/home.css
+++ b/client/src/Assets/Styles/home.css
@@ -408,3 +408,73 @@ background-color: #EAF0F0;
   align-items: end;
   margin-top: 3%;
 }
+.flight-container{
+  width: 92%;
+    margin: 3% 4% 0 4%;
+    /* background-color: #cdf2ff; */
+    border-radius: 12px;
+}
+.flight-list {
+  text-decoration: none;
+  list-style: none;
+  color: var(--main-color);
+  font-family: "Dm sans", sans-serif;
+  width: 100%;
+  border-radius: 12px;
+}
+.flight-info{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #cdf2ff;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+  border-radius: 12px;
+  width: 100%;
+  height: 13vh;
+  margin-bottom: 1%;
+}
+.flight-info .flight1{
+  display: flex;
+  flex-direction: column;
+  align-items:baseline;
+  margin-left: 0;
+  width: 55%;
+}
+.compagnie{
+  color: red;
+  font-weight: 800;
+  margin-left: 3%;
+  margin-top: 0;
+}
+.destination{
+  margin-top: 2%;
+  margin-left: 2%;
+}
+.temps{
+  display: block;
+  margin-left: 0;
+}
+.temps .date_depart{
+  color: #00e686;
+  font-weight: bolder;
+}
+.temps .dure{
+  color: gray;
+  font-family: "Dm sans",sans-serif;
+  font-size: 13px;
+}
+.book{
+  background-color: #00a9e6;
+  border-radius: 12px;
+  border: none;
+  width: 7%;
+  height: 70%;
+  color: #EAF0F0;
+  transition: 0.7s ease-in-out;
+
+}
+.book:hover{
+  transform: scale(0.8);
+    color: #fff;
+    background-color: #004b66;
+}
