--- a/client/src/Assets/Styles/navbar.css
+++ b/client/src/Assets/Styles/navbar.css
@@ -9,6 +9,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
+    z-index: 54;
 }
 .navbar {
     /* position: absolute; */
