css de la page home cote admin

--- a/admin/src/Assets/Styles/sidebar.css
+++ b/admin/src/Assets/Styles/sidebar.css
@@ -4,3 +4,13 @@
 #root{
     display: flex;
 }
+.componant{
+    width: 100%;
+    padding-left: 1.25rem;
+}
+.flex{
+    width: 100%;
+}
+.sidebar{
+    position: sticky;
+}
